--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "micromatch": "^4.0.2"
     },
     "peerDependencies": {
-        "hexo": "^4.2.0"
-    }
+        "hexo": "^5.2.0"
+    },
+    "devDependencies": {}
 }
