--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "hexo-html-prettify",
-    "version": "1.1.3",
+    "version": "1.1.4",
     "description": "HTML beautifier for Hexo static site generator.",
     "main": "index.js",
     "scripts": {
@@ -30,7 +30,7 @@
         "micromatch": "^4.0.2"
     },
     "peerDependencies": {
-        "hexo": "^4.2.0 || ^5.2.0"
+        "hexo": "^4.2.0 || ^5.2.0 || ^6.3.0"
     },
     "devDependencies": {}
 }
